syntax = "proto3";

package inventory;


service InventoryService {
  rpc CreateInventory(CreateInventoryRequest) returns (CreateInventoryResponse);
  rpc UpdateInventory(UpdateInventoryRequest) returns (UpdateInventoryResponse);
  rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse);
}

message InventoryItem {
  string id = 1;
  int32 quantity = 2;
}

message CreateInventoryRequest {
  string id = 1;
  int32 quantity = 2;
}

message CreateInventoryResponse {
  bool success = 1;
  string message = 2;
}

message UpdateInventoryRequest {
  string id = 1;
  int32 quantity_change = 2;
}

message UpdateInventoryResponse {
  bool success = 1;
  string message = 2;
}

message GetInventoryRequest {
  string id = 1;
}

message GetInventoryResponse {
  InventoryItem item = 1;
}