syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct (GetProductRequest) returns (Product) {}
  rpc GetProducts (GetProductsRequest) returns (GetProductsResponse) {}
  rpc CreateProduct (CreateProductRequest) returns (Product) {}
  rpc UpdateProduct (UpdateProductRequest) returns (Product) {}
  rpc DeleteProduct (DeleteProductRequest) returns (Product) {}

  rpc CreateIngredient(Ingredient) returns (Ingredient) {}
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string slug = 4;
  repeated ProductVariant productVariants = 5;
  string status = 6;
  bool isDeleted = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message ProductVariant {
  string id = 1;
  string name = 2;
  string sku = 3;
  string status = 4;
  map<string, string> attributes = 5;
  bool isDeleted = 6;
}

message Ingredient{
  string id = 1;
  string userId = 2;
  string name = 3;
  string unit = 4;
}

message GetProductRequest {
  string slug = 1;
}

message GetProductsRequest {
  string userId = 1;
  int32 page = 2;
  int32 limit = 3;
  string search = 4;
  string from = 5;
  string to = 6;
}

message GetProductsResponse {
  repeated Product data = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message CreateProductRequest {
  string userId = 1;
  string name = 2;
  string description = 3;
  string categoryId = 4;
  repeated ProductVariantInput productVariants = 5;
  string status = 6;
}

message ProductVariantInput {
  string name = 1;
  string sku = 2;
  string status = 3;
  map<string, string> attributes = 4;
}

message UpdateProductRequest {
  string id = 1;
  CreateProductRequest product = 2;
}

message DeleteProductRequest {
  string slug = 1;
  string userId = 2;
}